# server-messages

./: .env  .gitignore  Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_message_table.rs  m20220101_000002_create_user_table.rs
src/: main.rs  setup.rs
src/entities/: message.rs  mod.rs  prelude.rs  user.rs
