[package]
name = "server-safety"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
rocket = { version = "0.5.0", features = ["json"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
